some fixes && error handling rework
